lexers/lexer_numlit.cc
/* Generated by re2c 1.1.1 on Mon Feb 18 01:01:39 2019 */
#line 1 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.re"
#include <stdio.h>
#include <algorithm>

#include "lexers/lexers.h"
using namespace std;

Number lex_number(const char *YYCURSOR)
{
	vector<Token> ans;
	const char *YYMARKER, *o1, *o2;
    const char *start = YYCURSOR;

	const char *yyt1;
	
loop:
    
#line 20 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.cc"
{
	char yych;
	unsigned int yyaccept = 0;
	yych = *YYCURSOR;
	switch (yych) {
	case 0x00:	goto yy2;
	case '0':
		yyt1 = YYCURSOR;
		goto yy6;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		yyt1 = YYCURSOR;
		goto yy7;
	default:	goto yy4;
	}
yy2:
	++YYCURSOR;
#line 34 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.re"
	{ return Number{}; }
#line 47 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.cc"
yy4:
	++YYCURSOR;
yy5:
#line 30 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.re"
	{ 
            Number n{};
            return n; 
        }
#line 56 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.cc"
yy6:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'X':
	case 'x':	goto yy10;
	default:	goto yy5;
	}
yy7:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\'':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy7;
	case '.':	goto yy12;
	case 'E':
	case 'e':	goto yy15;
	case 'S':
	case 's':	goto yy16;
	case 'U':
	case 'u':	goto yy17;
	default:	goto yy9;
	}
yy9:
	o1 = yyt1;
	o2 = YYCURSOR;
#line 55 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.re"
	{ 
            string s(o1, o2);
            // Todo: Make something smarter here
            s.erase(std::remove(s.begin(), s.end(), '\''), s.end());
            s.erase(std::remove(s.begin(), s.end(), 'S'), s.end());
            s.erase(std::remove(s.begin(), s.end(), 's'), s.end());

            auto ans = stoll(s);
            Number n;
            n.set_val_i64(ans);
            return n; 
        }
#line 105 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.cc"
yy10:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\'':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy19;
	default:	goto yy11;
	}
yy11:
	YYCURSOR = YYMARKER;
	switch (yyaccept) {
	case 0: 	goto yy5;
	case 1: 	goto yy9;
	default:	goto yy14;
	}
yy12:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\'':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy12;
	case 'E':
	case 'e':	goto yy15;
	default:	goto yy14;
	}
yy14:
	o1 = yyt1;
	o2 = YYCURSOR;
#line 35 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.re"
	{ 
            string s(o1, o2);
            s.erase(std::remove(s.begin(), s.end(), '\''), s.end());

            double ans = stod(s);
            Number n;
            n.set_val_d64(ans);
            return n; 
        }
#line 173 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.cc"
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\'':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy22;
	case '+':
	case '-':	goto yy25;
	default:	goto yy11;
	}
yy16:
	++YYCURSOR;
	goto yy9;
yy17:
	++YYCURSOR;
	o1 = yyt1;
	o2 = YYCURSOR;
#line 68 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.re"
	{ 
            string s(o1, o2);
            s.erase(std::remove(s.begin(), s.end(), '\''), s.end());

            auto ans = stoull(s);
            Number n;
            n.set_val_u64(ans);
            return n; 
        }
#line 209 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.cc"
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\'':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy19;
	case 'S':
	case 's':	goto yy26;
	case 'U':
	case 'u':	goto yy28;
	default:	goto yy21;
	}
yy21:
	o1 = yyt1;
	o2 = YYCURSOR;
#line 78 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.re"
	{ 
            string s(o1, o2);
            s.erase(std::remove(s.begin(), s.end(), '\''), s.end());

            auto ans = stoull(s, 0, 16);
            Number n;
            n.set_val_u64(ans);
            return n; 
        }
#line 255 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.cc"
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\'':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy22;
	default:	goto yy24;
	}
yy24:
	o1 = yyt1;
	o2 = YYCURSOR;
#line 45 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.re"
	{ 
            string s(o1, o2);
            s.erase(std::remove(s.begin(), s.end(), '\''), s.end());

            double ans = stod(s);
            Number n;
            n.set_val_d64(ans);
            return n; 
        }
#line 285 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.cc"
yy25:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\'':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy22;
	default:	goto yy11;
	}
yy26:
	++YYCURSOR;
	o1 = yyt1;
	o2 = YYCURSOR;
#line 88 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.re"
	{ 
            string s(o1, o2);
            // Todo: Make something smarter here
            s.erase(std::remove(s.begin(), s.end(), '\''), s.end());
            s.erase(std::remove(s.begin(), s.end(), 'S'), s.end());
            s.erase(std::remove(s.begin(), s.end(), 's'), s.end());

            auto ans = stoull(s, 0, 16);
            Number n;
            n.set_val_i64(ans);
            return n; 
        }
#line 319 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.cc"
yy28:
	++YYCURSOR;
	goto yy21;
}
#line 100 "/cygdrive/C/repos/scalc/lexers/lexer_numlit.re"

}